// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordChangeForm does not submit when password is not provided 1`] = `
<div>
  <form>
    <div
      class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
    >
      <label
        class="MuiFormLabel-root-16 MuiFormLabel-filled-20 MuiInputLabel-root-5 MuiInputLabel-formControl-10 MuiInputLabel-animated-13 MuiInputLabel-shrink-12"
        data-shrink="true"
        for="currentPassword"
      >
        Current Password
      </label>
      <div
        class="MuiInputBase-root-36 MuiInput-root-23 MuiInput-underline-27 MuiInputBase-fullWidth-45 MuiInput-fullWidth-30 MuiInputBase-formControl-37 MuiInput-formControl-24"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-46 MuiInput-input-31 MuiInputBase-inputType-49 MuiInput-inputType-34"
          data-testid="currentPassword"
          id="currentPassword"
          name="currentPassword"
          type="password"
          value="xx"
        />
      </div>
    </div>
    <div
      class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
    >
      <label
        class="MuiFormLabel-root-16 MuiFormLabel-error-19 MuiInputLabel-error-8 MuiInputLabel-root-5 MuiInputLabel-formControl-10 MuiInputLabel-animated-13"
        data-shrink="false"
        for="newPassword"
      >
        New Password
      </label>
      <div
        class="MuiInputBase-root-36 MuiInput-root-23 MuiInput-underline-27 MuiInputBase-error-42 MuiInput-error-28 MuiInputBase-fullWidth-45 MuiInput-fullWidth-30 MuiInputBase-formControl-37 MuiInput-formControl-24"
      >
        <input
          aria-describedby="newPassword-helper-text"
          aria-invalid="true"
          class="MuiInputBase-input-46 MuiInput-input-31 MuiInputBase-inputType-49 MuiInput-inputType-34"
          data-testid="newPassword"
          id="newPassword"
          name="newPassword"
          type="password"
          value=""
        />
      </div>
      <p
        class="MuiFormHelperText-root-93 MuiFormHelperText-error-94"
        id="newPassword-helper-text"
      >
        Enter your new password.
      </p>
    </div>
    <div
      class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
    >
      <label
        class="MuiFormLabel-root-16 MuiFormLabel-error-19 MuiInputLabel-error-8 MuiInputLabel-root-5 MuiInputLabel-formControl-10 MuiInputLabel-animated-13"
        data-shrink="false"
        for="confirmedPassword"
      >
        Confirm Password
      </label>
      <div
        class="MuiInputBase-root-36 MuiInput-root-23 MuiInput-underline-27 MuiInputBase-error-42 MuiInput-error-28 MuiInputBase-fullWidth-45 MuiInput-fullWidth-30 MuiInputBase-formControl-37 MuiInput-formControl-24"
      >
        <input
          aria-describedby="confirmedPassword-helper-text"
          aria-invalid="true"
          class="MuiInputBase-input-46 MuiInput-input-31 MuiInputBase-inputType-49 MuiInput-inputType-34"
          data-testid="confirmedPassword"
          id="confirmedPassword"
          name="confirmedPassword"
          type="password"
          value=""
        />
      </div>
      <p
        class="MuiFormHelperText-root-93 MuiFormHelperText-error-94"
        id="confirmedPassword-helper-text"
      >
        Please confirm your new password.
      </p>
    </div>
    <div
      class="SubmitButton-root-53 SubmitButton-submitInPage-56"
    >
      <button
        class="MuiButtonBase-root-83 MuiButton-root-57 MuiButton-contained-68 MuiButton-containedPrimary-69 MuiButton-raised-71 MuiButton-raisedPrimary-72"
        data-testid="updatePasswordButton"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label-58"
        >
          Update Password
        </span>
        <span
          class="MuiTouchRipple-root-86"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`PasswordChangeForm renders correctly 1`] = `
<div>
  <form>
    <div
      class="MuiFormControl-root-246 MuiFormControl-marginNormal-247 MuiFormControl-fullWidth-249"
    >
      <label
        class="MuiFormLabel-root-261 MuiInputLabel-root-250 MuiInputLabel-formControl-255 MuiInputLabel-animated-258"
        data-shrink="false"
        for="currentPassword"
      >
        Current Password
      </label>
      <div
        class="MuiInputBase-root-281 MuiInput-root-268 MuiInput-underline-272 MuiInputBase-fullWidth-290 MuiInput-fullWidth-275 MuiInputBase-formControl-282 MuiInput-formControl-269"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-291 MuiInput-input-276 MuiInputBase-inputType-294 MuiInput-inputType-279"
          data-testid="currentPassword"
          id="currentPassword"
          name="currentPassword"
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      class="MuiFormControl-root-246 MuiFormControl-marginNormal-247 MuiFormControl-fullWidth-249"
    >
      <label
        class="MuiFormLabel-root-261 MuiInputLabel-root-250 MuiInputLabel-formControl-255 MuiInputLabel-animated-258"
        data-shrink="false"
        for="newPassword"
      >
        New Password
      </label>
      <div
        class="MuiInputBase-root-281 MuiInput-root-268 MuiInput-underline-272 MuiInputBase-fullWidth-290 MuiInput-fullWidth-275 MuiInputBase-formControl-282 MuiInput-formControl-269"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-291 MuiInput-input-276 MuiInputBase-inputType-294 MuiInput-inputType-279"
          data-testid="newPassword"
          id="newPassword"
          name="newPassword"
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      class="MuiFormControl-root-246 MuiFormControl-marginNormal-247 MuiFormControl-fullWidth-249"
    >
      <label
        class="MuiFormLabel-root-261 MuiInputLabel-root-250 MuiInputLabel-formControl-255 MuiInputLabel-animated-258"
        data-shrink="false"
        for="confirmedPassword"
      >
        Confirm Password
      </label>
      <div
        class="MuiInputBase-root-281 MuiInput-root-268 MuiInput-underline-272 MuiInputBase-fullWidth-290 MuiInput-fullWidth-275 MuiInputBase-formControl-282 MuiInput-formControl-269"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-291 MuiInput-input-276 MuiInputBase-inputType-294 MuiInput-inputType-279"
          data-testid="confirmedPassword"
          id="confirmedPassword"
          name="confirmedPassword"
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      class="SubmitButton-root-298 SubmitButton-submitInPage-301"
    >
      <button
        class="MuiButtonBase-root-328 MuiButton-root-302 MuiButton-contained-313 MuiButton-containedPrimary-314 MuiButton-raised-316 MuiButton-raisedPrimary-317"
        data-testid="updatePasswordButton"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label-303"
        >
          Update Password
        </span>
        <span
          class="MuiTouchRipple-root-331"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`PasswordChangeForm submits when password is provided at least 6 characters: after submit 1`] = `
<div>
  <form>
    <div
      class="MuiFormControl-root-101 MuiFormControl-marginNormal-102 MuiFormControl-fullWidth-104"
    >
      <label
        class="MuiFormLabel-root-116 MuiFormLabel-filled-120 MuiInputLabel-root-105 MuiInputLabel-formControl-110 MuiInputLabel-animated-113 MuiInputLabel-shrink-112"
        data-shrink="true"
        for="currentPassword"
      >
        Current Password
      </label>
      <div
        class="MuiInputBase-root-136 MuiInput-root-123 MuiInput-underline-127 MuiInputBase-fullWidth-145 MuiInput-fullWidth-130 MuiInputBase-formControl-137 MuiInput-formControl-124"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-146 MuiInput-input-131 MuiInputBase-inputType-149 MuiInput-inputType-134"
          data-testid="currentPassword"
          id="currentPassword"
          name="currentPassword"
          type="password"
          value="abc"
        />
      </div>
    </div>
    <div
      class="MuiFormControl-root-101 MuiFormControl-marginNormal-102 MuiFormControl-fullWidth-104"
    >
      <label
        class="MuiFormLabel-root-116 MuiFormLabel-filled-120 MuiInputLabel-root-105 MuiInputLabel-formControl-110 MuiInputLabel-animated-113 MuiInputLabel-shrink-112"
        data-shrink="true"
        for="newPassword"
      >
        New Password
      </label>
      <div
        class="MuiInputBase-root-136 MuiInput-root-123 MuiInput-underline-127 MuiInputBase-fullWidth-145 MuiInput-fullWidth-130 MuiInputBase-formControl-137 MuiInput-formControl-124"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-146 MuiInput-input-131 MuiInputBase-inputType-149 MuiInput-inputType-134"
          data-testid="newPassword"
          id="newPassword"
          name="newPassword"
          type="password"
          value="xyzxyz9"
        />
      </div>
    </div>
    <div
      class="MuiFormControl-root-101 MuiFormControl-marginNormal-102 MuiFormControl-fullWidth-104"
    >
      <label
        class="MuiFormLabel-root-116 MuiFormLabel-filled-120 MuiInputLabel-root-105 MuiInputLabel-formControl-110 MuiInputLabel-animated-113 MuiInputLabel-shrink-112"
        data-shrink="true"
        for="confirmedPassword"
      >
        Confirm Password
      </label>
      <div
        class="MuiInputBase-root-136 MuiInput-root-123 MuiInput-underline-127 MuiInputBase-fullWidth-145 MuiInput-fullWidth-130 MuiInputBase-formControl-137 MuiInput-formControl-124"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-146 MuiInput-input-131 MuiInputBase-inputType-149 MuiInput-inputType-134"
          data-testid="confirmedPassword"
          id="confirmedPassword"
          name="confirmedPassword"
          type="password"
          value="xyzxyz9"
        />
      </div>
    </div>
    <div
      class="SubmitButton-root-153 SubmitButton-submitInPage-156"
    >
      <button
        class="MuiButtonBase-root-183 MuiButtonBase-disabled-184 MuiButton-root-157 MuiButton-contained-168 MuiButton-containedPrimary-169 MuiButton-raised-171 MuiButton-raisedPrimary-172 MuiButton-disabled-177"
        data-testid="updatePasswordButton"
        disabled=""
        tabindex="-1"
        type="submit"
      >
        <span
          class="MuiButton-label-158"
        >
          Update Password
        </span>
      </button>
      <div
        class="MuiCircularProgress-root-193 MuiCircularProgress-colorPrimary-196 MuiCircularProgress-indeterminate-195 SubmitButton-progress-154"
        role="progressbar"
        style="width: 24px; height: 24px;"
      >
        <svg
          class="MuiCircularProgress-svg-198"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle-199 MuiCircularProgress-circleIndeterminate-201"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </div>
    </div>
  </form>
</div>
`;

exports[`PasswordChangeForm submits when password is provided at least 6 characters: before submit 1`] = `
<div>
  <form>
    <div
      class="MuiFormControl-root-101 MuiFormControl-marginNormal-102 MuiFormControl-fullWidth-104"
    >
      <label
        class="MuiFormLabel-root-116 MuiFormLabel-filled-120 MuiInputLabel-root-105 MuiInputLabel-formControl-110 MuiInputLabel-animated-113 MuiInputLabel-shrink-112"
        data-shrink="true"
        for="currentPassword"
      >
        Current Password
      </label>
      <div
        class="MuiInputBase-root-136 MuiInput-root-123 MuiInput-underline-127 MuiInputBase-fullWidth-145 MuiInput-fullWidth-130 MuiInputBase-formControl-137 MuiInput-formControl-124"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-146 MuiInput-input-131 MuiInputBase-inputType-149 MuiInput-inputType-134"
          data-testid="currentPassword"
          id="currentPassword"
          name="currentPassword"
          type="password"
          value="abc"
        />
      </div>
    </div>
    <div
      class="MuiFormControl-root-101 MuiFormControl-marginNormal-102 MuiFormControl-fullWidth-104"
    >
      <label
        class="MuiFormLabel-root-116 MuiFormLabel-filled-120 MuiInputLabel-root-105 MuiInputLabel-formControl-110 MuiInputLabel-animated-113 MuiInputLabel-shrink-112"
        data-shrink="true"
        for="newPassword"
      >
        New Password
      </label>
      <div
        class="MuiInputBase-root-136 MuiInput-root-123 MuiInput-underline-127 MuiInputBase-fullWidth-145 MuiInput-fullWidth-130 MuiInputBase-formControl-137 MuiInput-formControl-124"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-146 MuiInput-input-131 MuiInputBase-inputType-149 MuiInput-inputType-134"
          data-testid="newPassword"
          id="newPassword"
          name="newPassword"
          type="password"
          value="xyzxyz9"
        />
      </div>
    </div>
    <div
      class="MuiFormControl-root-101 MuiFormControl-marginNormal-102 MuiFormControl-fullWidth-104"
    >
      <label
        class="MuiFormLabel-root-116 MuiFormLabel-filled-120 MuiInputLabel-root-105 MuiInputLabel-formControl-110 MuiInputLabel-animated-113 MuiInputLabel-shrink-112"
        data-shrink="true"
        for="confirmedPassword"
      >
        Confirm Password
      </label>
      <div
        class="MuiInputBase-root-136 MuiInput-root-123 MuiInput-underline-127 MuiInputBase-fullWidth-145 MuiInput-fullWidth-130 MuiInputBase-formControl-137 MuiInput-formControl-124"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input-146 MuiInput-input-131 MuiInputBase-inputType-149 MuiInput-inputType-134"
          data-testid="confirmedPassword"
          id="confirmedPassword"
          name="confirmedPassword"
          type="password"
          value="xyzxyz9"
        />
      </div>
    </div>
    <div
      class="SubmitButton-root-153 SubmitButton-submitInPage-156"
    >
      <button
        class="MuiButtonBase-root-183 MuiButton-root-157 MuiButton-contained-168 MuiButton-containedPrimary-169 MuiButton-raised-171 MuiButton-raisedPrimary-172"
        data-testid="updatePasswordButton"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label-158"
        >
          Update Password
        </span>
        <span
          class="MuiTouchRipple-root-186"
        />
      </button>
    </div>
  </form>
</div>
`;
